--- a/themes/coder/static/less/style.less
+++ b/themes/coder/static/less/style.less
@@ -113,12 +113,11 @@ pre {
   overflow-x: auto;
 }
 
-code {
+/* code {
   display: inline-block;
   background-color: @darker-fg-color;
   color: @bg-color;
-  padding: 0.4rem 0.8rem 0.4rem 0.8rem;
-}
+  padding: 0.4rem 0.8rem 0.4rem 0.8rem;} */
 
 blockquote {
   border-left: 2px solid @darker-bg-color;
